# shiny_qpcr

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  claude.md  docker-compose.yml  pyproject.toml  qpcr_importer.py  requirements.txt  shared.py  test.csv
calculations/: dct.py  ddct.py  enrichment.py
modules/: dct_module.py  ddct_module.py  enrichment_module.py
tests/: test_dct.py  test_ddct.py  test_enrichment.py  test_shared.py
