[project]
name = "shiny-qpcr"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "shiny>=1.2.0",
    "shinywidgets>=0.3.4",
    "plotly>=5.24.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]
